--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="exception_senha_fraca">Digite uma senha mais forte</string>
     <string name="exception_email_invalido">Digite um e-mail válido</string>
     <string name="exception_usuario_ja_cadastrado">Este e-mail já está cadastrado</string>
+
+    <string name="exception_email_senha">E-mail e/ou senha não correspondem</string>
+    <string name="exception_usuario_nao_cadastrado">Usuário não cadastrado</string>
 </resources>
