--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="exception_email_senha">E-mail e/ou senha não correspondem</string>
     <string name="exception_usuario_nao_cadastrado">Usuário não cadastrado</string>
 
+    <string name="upload_image_error">Erro ao Fazer upload da Imagem</string>
+    <string name="upload_image_sucess">Sucesso ao Fazer upload da Imagem</string>
+
     <string name="toolbar_pesquisar">Pesquisar</string>
     <string name="toolbar_config">Configurações</string>
     <string name="sair">Sair</string>
