--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="info_config">Esse não é o seu nome de usuário, nem sua senha. Esse nome ficará visível para seus contatos do xapp</string>
     <string name="title_activity_chat">ChatActivity</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_grupo">GrupoActivity</string>
 </resources>
